--- a/7. Twice as big as possible/Twice As Big If Possible/Twice As Big If Possible/Base.lproj/Main.storyboard
+++ b/7. Twice as big as possible/Twice As Big If Possible/Twice As Big If Possible/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ka1-ej-g8L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7rj-42-edA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Twice as big as possible-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Twice_As_Big_If_Possible" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Twice as big as possible" customClass="ViewController" customModule="Twice_As_Big_If_Possible" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -52,10 +52,10 @@
             </objects>
             <point key="canvasLocation" x="140.57971014492756" y="133.92857142857142"/>
         </scene>
-        <!--View Controller-->
+        <!--Scretch or squeeze-->
         <scene sceneID="24c-jL-3BQ">
             <objects>
-                <viewController id="Ka1-ej-g8L" sceneMemberID="viewController">
+                <viewController id="Ka1-ej-g8L" userLabel="Scretch or squeeze" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zfK-5G-Nou">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -89,7 +89,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8FY-Ag-Bpm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="849" y="134"/>
+            <point key="canvasLocation" x="957" y="134"/>
+        </scene>
+        <!--As big as possible-->
+        <scene sceneID="OR9-da-PrY">
+            <objects>
+                <viewController id="7rj-42-edA" userLabel="As big as possible" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oBS-Hx-BYN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vu9-q6-nbs">
+                                <rect key="frame" x="0.0" y="241" width="414" height="414"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Vu9-q6-nbs" secondAttribute="height" multiplier="1:1" identifier="blueViewAspectRatio" id="g7e-pm-hA7"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3e7-kb-pP1"/>
+                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                        <constraints>
+                            <constraint firstItem="Vu9-q6-nbs" firstAttribute="centerX" secondItem="oBS-Hx-BYN" secondAttribute="centerX" id="ALO-ax-W0t"/>
+                            <constraint firstItem="Vu9-q6-nbs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3e7-kb-pP1" secondAttribute="leading" id="DOX-YS-2Ro"/>
+                            <constraint firstItem="Vu9-q6-nbs" firstAttribute="centerY" secondItem="oBS-Hx-BYN" secondAttribute="centerY" id="InT-em-EG8"/>
+                            <constraint firstItem="Vu9-q6-nbs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="3e7-kb-pP1" secondAttribute="top" id="trK-bl-CSC"/>
+                            <constraint firstItem="Vu9-q6-nbs" firstAttribute="width" secondItem="oBS-Hx-BYN" secondAttribute="width" priority="999" id="xYN-4z-5Zd"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vnz-9F-UzP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1835" y="134"/>
         </scene>
     </scenes>
     <resources>
